# metaicvi

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: Publish.yml  Test.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/reference/: index.rst  metaicvi.rst
scripts/: demo.py
src/metaicvi/: __init__.py  lib.py  metaicvi.py
src/metaicvi/compat/: Meta_iCVIs.py  __init__.py  datasets.py  demo.py  iCVIs.py
tests/: test_metaicvi.py
